--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 										<img src="dist/images/jonh.jpeg" alt="Splash Screen">
                                     </div>
                                     <h3 class="feature-title mt-24">João Machado</h3>
-                                    <p class="text-sm mb-0">Adora programar em c++. É responsável e dedicado. Encontra na programação o segredo para a felicidade. Novos desafios é o seu nome do meio. Se não está a programar, deve estar morto.</p>
+                                    <p class="text-sm mb-0">Adora programar em c++. É responsável e dedicado. Encontra na programação o segredo para a felicidade. Novos desafios é o seu nome do meio. Se não está a programar, deve estar a comer</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
