Updates images file

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						</p>
                     </div>
                     <div style="margin-top: 20px;" class="col-md-06">
-							  <img src="dist/images/screenshot.png" alt="Splash Screen" style=" width:50%; display: block; margin: auto auto;"><br><br>
+							  <img src="dist/images/android.png" alt="Splash Screen" style=" width:50%; display: block; margin: auto auto;"><br><br>
 							  <a href="#"> <img src="dist/images/play.png" alt="Splash Screen" style="width: 200px; display: block; margin: auto auto;"></a> <!--todo change href value to redirect to download apk-->
 					</div> 
                 </div>
@@ -163,7 +163,7 @@
                            <h2 class="section-title mt-0">WEB</h2>
 
 						<p class="text-sm mb-0">
-							A interface web serve essencialmente para a parte administrativa da instituição uma vez que só os utilizadores com atributos administrativos poderão aceder e gerir quer áreas a monitorizar, gerir alertas de densidade populacional, gerir utilizadores registados e obter analises temporais das áreas definidas. <a href="https://pint2021front.herokuapp.com/" target="_blank" style="text-decoration: none; color: white;">Visitar website.</a> <!--todo change href value to redirect to website-->
+							A interface web serve essencialmente para a parte administrativa da instituição uma vez que só os utilizadores com atributos administrativos poderão aceder e gerir quer áreas a monitorizar, gerir alertas de densidade populacional, gerir utilizadores registados e obter analises temporais das áreas definidas. <a href="https://pint2021front.herokuapp.com/" target="_blank" style="text-decoration: none; color: white;">Visitar website.</a> 
 						</p>
 
 						<div>
@@ -185,7 +185,7 @@
 										<img src="dist/images/jonh.jpeg" alt="Splash Screen">
                                     </div>
                                     <h3 class="feature-title mt-24">João Machado</h3>
-                                    <p class="text-sm mb-0">Adora programar em c++. É responsável e dedicado. Encontra na programação o segredo para a felicidade. Novos desafios é o seu nome do meio. Se não está a programar, deve estar a comer</p>
+                                    <p class="text-sm mb-0">Adora programar em c++. É responsável e dedicado. Encontra na programação o segredo para a felicidade. Novos desafios é o seu nome do meio. Se não está a programar, deve estar a comer...</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
