--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                     <div style="margin-top: 20px;" class="col-md-06">
 							  <img src="dist/images/android.png" alt="Splash Screen" style=" width:50%; display: block; margin: auto auto;"><br><br>
-							  <a href="#"> <img src="dist/images/play.png" alt="Splash Screen" style="width: 200px; display: block; margin: auto auto;"></a> <!--todo change href value to redirect to download apk-->
+							  <a href="https://bit.ly/3hdl84V"> <img src="dist/images/play.png" alt="Splash Screen" style="width: 200px; display: block; margin: auto auto;"></a>
 					</div> 
                 </div>
             </section>
